src/processing/snapshots/bevy_state_plugin_generator__processing__tests__flatten_parse_node_lists@list_root_a.snap
---
source: src/processing/tests.rs
expression: flatten_parse_node(node)
---
[
    NodeData {
        index: 0,
        parent: None,
        node_type: List,
        depth: 0,
        name: "Root",
    },
    NodeData {
        index: 1,
        parent: Some(
            0,
        ),
        node_type: Singleton,
        depth: 1,
        name: "A",
    },
]
