src/processing/snapshots/bevy_state_plugin_generator__processing__tests__flatten_parse_node_lists@list_root_a_b.snap
---
source: src/processing/tests.rs
expression: flatten_parse_node(node)
---
[
    NodeData {
        index: 0,
        parent: None,
        node_type: List,
        depth: 0,
        name: "Root",
        resolved_name: None,
        variants: [
            "A",
        ],
    },
    NodeData {
        index: 1,
        parent: Some(
            0,
        ),
        node_type: List,
        depth: 1,
        name: "A",
        resolved_name: None,
        variants: [
            "B",
        ],
    },
    NodeData {
        index: 2,
        parent: Some(
            1,
        ),
        node_type: Singleton,
        depth: 2,
        name: "B",
        resolved_name: None,
        variants: [],
    },
]
